--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,34 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #BF4F74;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+  @media (max-width: 750px) {
+    h1{
+      font-size: larger;
+    }
+
+    h2{
+      font-size: large;
+    }
+
+    h3{
+      font-size: medium;
+    }
+
+    h4{
+      font-size: small;
+    }
+
+    p{
+      font-size: small;
+    }
+  }
